@@ -1,11 +1,4 @@
 To be addressed before 7.18.0 (planned release: January 2008)
 =============================
 
-Less likely to go in 7.18.0
-===========================
-
-112 - pipelining patch(es) from Dmitry Kurochkin (outstanding work left probably
-      no longer targeted for this release)
-      http://curl.haxx.se/mail/lib-2007-12/0252.html
-
 118 - 
