@@ -54,6 +54,7 @@ This release includes the following bugfixes:
  o range support for file:// transfers
  o libcurl hang with huge POST request and request-body read from callback
  o removed extra newlines from many error messages
+ o improved pipelining
 
 This release includes the following known bugs:
 
